[package]
name = "morano_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
frankenstein = "0.8.0"
anyhow = "1.0.51"
async-stream = "0.3.2"
futures = "0.3.18"
